Restructured files and created interfaces directory. Updated relevant paths in code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 data_structures/linked_list/__pycache__
 data_structures/common/__pycache__
 tests/data_structures/linked_list/__pycache__
+data_structures/interfaces/__pycache__
